// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> flat story renders snapshot 1`] = `
<button
  class="button sizeMedium variantFlat colorSuccess"
  type="button"
>
  ​
  Flat Button
</button>
`;

exports[`<Button /> link story renders snapshot 1`] = `
<button
  class="button variantLink colorAlert"
  type="button"
>
  ​
  Link Button
</button>
`;

exports[`<Button /> linkInBody story renders snapshot 1`] = `
<p
  class="typography sizeBody colorBase"
>
  This text surrounds the 
  <button
    class="button variantLink colorBrand"
    type="button"
  >
    ​
    Link Button
  </button>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Button /> linkInHeading story renders snapshot 1`] = `
<p
  class="typography sizeH1 colorBase"
>
  This text surrounds the 
  <button
    class="button variantLink colorBrand"
    type="button"
  >
    ​
    Link Button
  </button>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Button /> linkWithIcon story renders snapshot 1`] = `
<button
  class="button variantLink colorSuccess"
  type="button"
>
  ​
  Link with icon 
  <svg
    aria-hidden="true"
    class="svgIcon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.9959.9959 0 010-1.41c.39-.39 1.02-.39 1.41 0L10 14.17l6.88-6.88c.39-.39 1.02-.39 1.41 0 .39.39.39 1.02 0 1.41l-7.59 7.59c-.38.39-1.02.39-1.41 0z"
    />
  </svg>
</button>
`;

exports[`<Button /> outline story renders snapshot 1`] = `
<button
  class="button sizeMedium variantOutline colorBrand"
  type="button"
>
  ​
  Outline Button
</button>
`;

exports[`<Button /> outlineWithIcon story renders snapshot 1`] = `
<button
  class="button sizeMedium variantOutline colorWarning"
  type="button"
>
  ​
  Outline with icon 
  <svg
    aria-hidden="true"
    class="svgIcon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.9959.9959 0 010-1.41c.39-.39 1.02-.39 1.41 0L10 14.17l6.88-6.88c.39-.39 1.02-.39 1.41 0 .39.39.39 1.02 0 1.41l-7.59 7.59c-.38.39-1.02.39-1.41 0z"
    />
  </svg>
</button>
`;

exports[`<Button /> withDataTestId story renders snapshot 1`] = `
<button
  class="button sizeMedium variantFlat colorAlert"
  data-testid="fake-test-id"
  type="button"
>
  ​
  Button with data-testid
</button>
`;

exports[`<Button /> withFakeClassName story renders snapshot 1`] = `
<button
  class="fake-className button sizeMedium variantOutline colorWarning"
  type="button"
>
  ​
  With fake className
</button>
`;
